Lots of changes

--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -1,9 +1,61 @@
-<footer class="{{ 'fixed' if path == 'home' }} bottom-0 text-center w-full py-4">
-    <small class="text-gray-500">Copyright ©
-        {{settings.name}}
-        2020. Made with ❤ by
-        <a href="{{settings.url}}" target="_blank" class="underline">{{settings.author}}</a>
-        •
-        <a href="https://github.com/surjithctly/neat-starter" class="underline" target="_blank" rel="noopener">View on Github</a>
-    </small>
+<!-- ============================================ -->
+<!--                   Footer                     -->
+<!-- ============================================ -->
+
+<footer id="footer">
+    <div class="container">
+        <div class="left-section">
+            <a class="logo" href="/"><img loading="lazy" decoding="async" src="/assets/images/logo-no-background.svg" alt="logo" width="120" height="120"></a>
+        </div>
+        <div class="right-section">
+            <div class="lists">
+                <ul>
+                    <li>
+                        <h2>Info</h2>
+                    </li>
+                    <li>
+                        <a href="/">Home</a>
+                    </li>
+                    <li>
+                        <a href="/about">About Us</a>
+                    </li>
+                    <li>
+                        <a href="/casinos">Casinos</a>
+                    </li>
+                    <li>
+                        <a href="/testimonials">Testimonials</a>
+                    </li>
+                    <li>
+                        <a href="/faq">FAQs</a>
+                    </li>
+                    <li>
+                        <a href="/contact">Contact</a>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <h2>Contact</h2>
+                    </li>
+                    <li>
+                        <a href="/contact">15624 44 St NW<br>Edmonton, AB T5Y 3H1</a>
+                    </li>
+                    <li>
+                        <a href="tel:780-707-3488">T: (780) 707-3488</a>
+                    </li>
+                    <li>
+                        <a href="tel:1-801-937-5396">Fax: 1-801-937-5396</a>
+                    </li>
+                    <li>
+                        <a href="mailto:info@EdmontonCasinoAdvisor.ca">Click to Email</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+    <div class="credit">
+        <span>Designed and Hand Coded by</span>
+        <a href="" target="_blank" rel="noopener">Edmonton Casino Advisors</a>
+        <span class="copyright"> Copyright 2024 - Present</span>
+    </div>
 </footer>
