--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -23,6 +23,9 @@
                         <a href="/casinos">Casinos</a>
                     </li>
                     <li>
+                        <a href="/promotions">Promotions</a>
+                    </li>
+                    <li>
                         <a href="/testimonials">Testimonials</a>
                     </li>
                     <li>
