--- a/src/_layouts/base.html
+++ b/src/_layouts/base.html
@@ -46,13 +46,13 @@
         <!-- For home page, use full title, including location for SEO. Other pages should just include the page name -->
         <title>
             {% if page.url == '/'%}
-                {{ client.name }} | {{ tagTitle }} | {{ client.address.city }}, {{ client.address.county }}
+                {{ client.name }} | {{ tagTitle }}
             {% else %}
                 {{ tagTitle }} | {{ client.name }}
             {% endif %}
         </title>
     </head>
-    <body>
+    <body class="notLoaded">
         <!--Screen reader skip main nav-->
         <a class="skip" aria-label="skip to main content" href="#main">Click To Skip To Main Content</a>
 
@@ -60,9 +60,9 @@
         <main id="main">{{ content | safe }}</main>
         {% include "footer.html" %}
 
-        <script defer src="/assets/js/nav.js"></script>
         <script defer src="/assets/js/dark.js"></script>
-
+        <script defer src="/assets/js/nav.js"></script>        
+        <script src="/static/js/alpine.js"></script>
         <!--
         This script adds a class to the body after scrolling 100px
         and we used these body.scroll styles to create some on scroll 
@@ -83,6 +83,32 @@
                         .remove('scroll')
                 }
             });
+        </script>
+        <script>
+            if (localStorage.getItem('theme')) {
+                theme = localStorage.getItem('theme');
+            }
+            // if it's not there, check to see if the user has applied dark mode preferences themselves in the browser
+            else if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches) {
+                theme = 'dark';
+            }
+            else
+            {
+                theme = 'light';
+            }
+
+            theme === 'dark' ? enableDarkMode() : disableDarkMode();
+
+            function enableDarkMode() {
+                document.body.classList.add('dark-mode');
+                document.body.classList.remove('notLoaded');
+                localStorage.setItem('theme', 'dark');
+            }
+            function disableDarkMode() {
+                document.body.classList.remove('dark-mode');
+                document.body.classList.remove('notLoaded');
+                localStorage.setItem('theme', 'light');
+            }
         </script>
     </body>
 </html>
