--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -13,8 +13,8 @@
     <div class="container">
         <!--Logo - Get SVGs if you can.  I use fiverr to get png's turned into SVGs. Highly recommend it, worth the $20 - get a light and dark version-->
         <a class="logo" aria-label="click to go to home page" href="/">
-            <!--Light Colored Logo, remove .dark image tag and the .light class if you don't have a dark and light version -->
-            <img class="dark" aria-hidden="true" src="/assets/images/logo-black.png" decoding="async" alt="logo" width="395" height="84">
+            <!--Light Colored Logo-->
+            <img class="dark" aria-hidden="true" src="/assets/images/logo-black.svg" decoding="async" alt="logo" width="395" height="395">
             <!--Dark Colored Logo-->
             <img class="light" aria-hidden="true" src="/assets/images/logo-no-background.svg" decoding="async" loading="lazy" alt="logo" width="395" height="84">
         </a>
