--- a/src/css/local.css
+++ b/src/css/local.css
@@ -62,7 +62,7 @@
       padding-bottom: clamp(2rem, 5.4vw, 2.5rem);
       box-shadow: 0px 20px 39px 0px rgba(0, 0, 0, 0.05);
       border-radius: 0.25rem;
-      background: #fff5d0;
+      background: var(--primaryShade);
       position: relative;
       display: flex;
       justify-content: space-between;
@@ -87,8 +87,13 @@
       margin: 0 0 1.25rem;
       padding-bottom: 1.25rem;
       color: var(--bodyTextColor);
-      border-bottom: 1px solid #E8E9EC;
+      border-bottom: 1px solid var(--bodyTextColor);
     }
+
+    body.dark-mode #reviews .cs-item-p {
+      border-bottom: 1px solid var(--bodyTextColorWhite);
+    }
+
     #reviews .cs-reviewer {
       font-size: 1rem;
       line-height: 1.5em;
