--- a/public/css/root.css
+++ b/public/css/root.css
@@ -5,7 +5,7 @@
 @media only screen and (min-width: 0em) {
     :root {
       --primary: #ba9956;
-      --primaryShade: #ffd175;
+      --primaryShade: #f2c66e;
       --primaryDark: #805d0d;
       --bodyTextColor: #161616;
       --bodyTextColorWhite: #fff5d0;
@@ -267,7 +267,7 @@
       z-index: -1;
       overflow: hidden;
       box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-      background-color: #fff;
+      background-color: #fffcf1;
       top: 3.7rem;
       padding-top: 0;
       height: 0;
@@ -324,7 +324,7 @@
       height: 0.5rem;
       background: var(--primary);
       opacity: 1;
-      bottom: 5rem;
+      bottom: -0.5rem;
       border-radius: 0.25rem;
       left: -0.375rem;
       right: -0.375rem;
@@ -332,7 +332,7 @@
     }
     #navigation #navbar-menu.open {
       height: 23.25rem;
-      padding-top: 1.25rem;
+      padding-top: 1.7rem;
       z-index: -100;
     }
     #navigation #navbar-menu.open ul li {
@@ -394,7 +394,7 @@
       top: 0;
       left: 0;
       width: 100%;
-      background-color: #fff;
+      background-color: #fffcf1;
       height: 0;
       transition: height .3s;
     }
@@ -432,7 +432,7 @@
       text-transform: uppercase;
       position: relative;
       z-index: 1;
-      color: #fff;
+      color: var(--bodyTextColorWhite);
       transition: color .3s;
     }
     #navigation #navbar-menu ul li a:before {
@@ -474,17 +474,17 @@
   /* Dark Mode Mobile */
   @media only screen and (max-width: 1023px) {
     body.dark-mode #navigation .background-color-div {
-      background-color: var(--dark);
+      background-color: var(--backgroundColorDark);
     }
     body.dark-mode #navigation .hamburger-menu.clicked span {
-      background-color: var(--dark);
+      background-color: var(--backgroundColorDark);
     }
     body.dark-mode #navigation .hamburger-menu span {
-      background-color: #fff;
+      background-color: var(--bodyTextColorWhite);
     }
     body.dark-mode #navigation .hamburger-menu span:before,
     body.dark-mode #navigation .hamburger-menu span:after {
-      background-color: #fff;
+      background-color: var(--bodyTextColorWhite);
     }
     body.dark-mode #navigation .logo .light {
       display: block;
@@ -496,7 +496,7 @@
       background-color: var(--medium);
     }
     body.dark-mode #navigation #navbar-menu ul li a {
-      color: #fff;
+      color: var(--bodyTextColorWhite);
     }
     body.dark-mode #navigation #navbar-menu ul li a:before {
       background: var(--accent);
@@ -517,7 +517,7 @@
       display: none !important;
     }
     body.dark-mode #navigation #navbar-menu ul li a {
-      color: #fff;
+      color: var(--bodyTextColorWhite);
     }
     body.dark-mode #navigation #navbar-menu ul li a:before {
       background: var(--accent);
