--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -46,19 +46,38 @@
                         <a href="tel:{{ client.phone }}">T: {{ client.phoneFormatted }}</a>
                     </li>
                     <li>
-                        <a href="tel:{{ client.fax }}">Fax: {{ client.fax }}</a>
-                    </li>
-                    <li>
                         <a href="mailto:{{ client.email }}">Click to Email</a>
                     </li>
+                    <li>
+                        <div style="margin-top: 10px;">
+                            <a href="https://linkedin.com/in/cristian-silviu-patilea-2508b8134" target="_blank" rel="noopener">
+                            <img aria-hidden="true"
+                                decoding="async"
+                                src="/assets/svgs/linkedin_icon_light.svg"
+                                alt="appliance"
+                                width="48"
+                                height="48"/>
+                            </a>
+                            <a href="https://facebook.com/EdmontonCasinoAdvisor/" target="_blank" rel="noopener">
+                            <img aria-hidden="true"
+                                decoding="async"
+                                src="/assets/svgs/fb_icon_light.svg"
+                                alt="appliance"
+                                width="42"
+                                height="42"
+                                style="margin-bottom:1px;"/>
+                            </a>
+                        </div>
+                    </li>
                 </ul>
+                
             </div>
         </div>
     </div>
 
     <div class="credit">
-        <span>Designed and Hand Coded by</span>
-        <a href="" target="_blank" rel="noopener">{{ client.name }}</a>
+        <span>Designed and Coded by</span>
+        <a href="https://www.linkedin.com/in/tinabcaron/" target="_blank" rel="noopener">Tina Caron</a>
         <span class="copyright"> Copyright 2024 - Present</span>
     </div>
 </footer>
